# conductor

./: .gitignore  README.md  mise.toml  nx.json  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: build.yml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.node.json
apps/desktop/src/: App.tsx  globals.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: errors.rs  file_guard.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/clients/: antigravity.rs  claude_code.rs  claude_desktop.rs  codex.rs  cursor.rs  jetbrains.rs  mod.rs  vscode.rs  windsurf.rs  zed.rs
apps/desktop/src-tauri/src/commands/: activity.rs  detection.rs  import.rs  logo.rs  mod.rs  oauth.rs  registry.rs  secrets.rs  servers.rs  settings.rs  stacks.rs  sync.rs  system.rs
apps/desktop/src-tauri/src/config/: backup.rs  mod.rs  normalizer.rs  serializer.rs
apps/desktop/src-tauri/src/oauth/: mod.rs
apps/desktop/src-tauri/src/watcher/: mod.rs
apps/desktop/src/components/: AddServerModal.tsx  ClientLogo.tsx  CommandPalette.tsx  ServerAvatar.tsx  ServerLogo.tsx
apps/desktop/src/hooks/: useAutoSync.ts
apps/web/: .env.example  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Clients.tsx  Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  Problem.tsx
apps/web/lib/: use-download.ts
apps/web/public/: install.sh
(+20 files in other folders)
