[package]
name = "conductor"
version = "1.0.0"
edition = "2021"

[lib]
name = "conductor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "8"
keyring = "3"
toml_edit = "0.22"
quick-xml = "0.37"
roxmltree = "0.20"
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
tempfile = "3"
thiserror = "2"
urlencoding = "2"
url = "2"
sha2 = "0.10"
anyhow = "1"
open = "5"
base64 = "0.22"
